--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans|Fira+Sans+Extra+Condensed:400,900|Lobster');
+
 body {
 	text-align: center;
 	background-color: #DC1400;
-
 }
-p, h1, h3, h5{
-	font-family: Helvetica, sans-serif;
+p, h3, h5{
+	font-family: "Fira Sans", sans-serif;
 	color: white;
 }
 p {
@@ -12,18 +13,29 @@ p {
 }
 h1 {
 	font-weight: 900;
-	font-size: 50px;
+	font-size: 200px;
+	font-family: "Fira Sans Extra Condensed", sans-serif;
+	color: white;
+	text-transform: uppercase;
 }
 h3 {
 	font-size: 22px;
 	text-transform: uppercase;
-	font-weight: bold
+	font-weight: 900
 }
 h5 {
 	font-size: 18px;
-	text-transform: uppercase;
-	font-weight: bold;
+	font-weight: 900;
 }
 img {
-	width:300px;
+	width:250px;
+}
+* {
+	padding: 0;
+	margin:0;
+
+}
+a {
+	color: white;
+	text-decoration: none;
 }
