--- a/unit_4/css/style1.css
+++ b/unit_4/css/style1.css
@@ -1,20 +1,99 @@
 @import url(https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:100,200,300,400,500,600,700,800,900|Fira+Sans+Extra+Condensed:100,200,300,400,500,600,700,800,900|Fira+Sans:100,200,300,400,500,600,700,800,900);
+* {
+	padding: 0;
+	margin: 0;
+}
 body {
 	text-align: center;
 	background-color: #E8DFFF;
-	font-family: "Fira Sans", sans-serif;
+	font-family: "Fira Sans", Helvetica, Arial, sans-serif;
+	font-size: 16px; /* 1em=16px*/
 }
 img {
-	width: 17em;
+	width: 15em;
 }
 a {
-	text-decoration: none;
-}
-nav {
 	color: black;
 	text-decoration: none;
-	font-size: 1.5em;
+}
+	a:hover {
+		color: #746F7F;
+	}
+nav {
+	color: white;
+	position: fixed;
+	text-align: center;
+	width: 100%;
+	padding-top: .5em;
+	padding-bottom: .5em;
+	background-color: black;
+}
+footer {
+	padding-top: 2em;
+	padding-bottom: 2em;
+	margin-bottom: 0em;
+	background-color: #DC1400;
+	color: white;
+}
+h1 {
+	font-weight: 900;
+	font-size: 10em;
+	font-family: "Fira Sans Extra Condensed", Helvetica, Arial, sans-serif;
+	color: white;
+	text-transform: uppercase;
+	letter-spacing: .015em;
+	padding-top: .2em;
+}
+h2, h3 {
+	text-transform: uppercase;
+	font-weight: 700;
+}
+h2 {
+	font-size:2.5em;
+	letter-spacing: .05em;
+}
+h3 {
+	font-size: 22px;
+}
+p {
+	line-height: 1.3em;
+	font-size: 1.4em;
+	font-weight: 400;
+	width: 35em;
+	margin: auto;
+	/*margin-left: 20%;
+	margin-right: 20%;*/
+}
+nav a {
+	padding-right: 2em;
+	padding-left: 2em;
+	color: white;
+	font-size: 1.2em;
+	text-transform: uppercase;
+	font-weight: 600;
+	letter-spacing: .05em;
+}
+.links {
+	color: black;
+}
+#intro, #about {
+	background-color: #DC1400;
+	color: white;
 }
 #intro {
-	background-color: #DC1400;
+	padding-top: 10em;
+	padding-bottom: 12em;
 }
+#about {
+	padding-top: 2em;
+	padding-bottom: 2em;
+}
+#work {
+	padding-top: 4em
+}
+#about a {
+	color: black;	
+}
+#about a:hover {
+		color: #746F7F;
+	}
