--- a/unit_4/css/style1.css
+++ b/unit_4/css/style1.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:100,200,300,400,500,600,700,800,900|Fira+Sans+Extra+Condensed:100,200,300,400,500,600,700,800,900|Fira+Sans:100,200,300,400,500,600,700,800,900);
+@import url(https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:100,200,300,400,500,600,700,800,900|Fira+Sans:100,200,300,400,500,600,700,800,900);
 * {
 	padding: 0;
 	margin: 0;
