--- a/unit_6/css/style1.css
+++ b/unit_6/css/style1.css
@@ -5,7 +5,7 @@
 }
 body {
 	text-align: center;
-	background-color: #E8DFFF;
+	background-color: #E6DCBE;
 	font-family: "Fira Sans", Helvetica, Arial, sans-serif;
 	font-size: 16px; /* 1em=16px*/
 }
@@ -16,9 +16,9 @@ a {
 	color: black;
 	text-decoration: none;
 }
-	a:hover {
-		color: #746F7F;
-	}
+a:hover {
+	opacity: .7;
+}
 nav {
 	color: white;
 	position: fixed;
@@ -51,6 +51,7 @@ h2, h3 {
 h2 {
 	font-size:2.5em;
 	letter-spacing: .05em;
+	padding: 0 0 2em 0;
 }
 h3 {
 	font-size: 22px;
@@ -65,8 +66,9 @@ p {
 	margin-right: 20%;*/
 }
 nav a {
-	padding-right: 2em;
-	padding-left: 2em;
+	/*padding-right: 2em;
+	padding-left: 2em;*/
+	padding: 0 2em;
 	color: white;
 	font-size: 1.2em;
 	text-transform: uppercase;
@@ -74,7 +76,7 @@ nav a {
 	letter-spacing: .05em;
 }
 div {
-	display: inline;
+	margin: 2em 2em;
 }
 .links {
 	color: black;
@@ -88,15 +90,25 @@ div {
 	padding-bottom: 12em;
 }
 #about {
-	padding-top: 2em;
-	padding-bottom: 2em;
+	padding: 2em 0;
 }
 #work {
-	padding-top: 4em
+	padding-top: 4em;
 }
 #about a {
 	color: black;	
 }
 #about a:hover {
-		color: #746F7F;
-	}
+	opacity: .7;
+}
+#col {
+	display: flex;
+}
+.grid-item img {
+    width: 200px;
+}
+
+.grid-item--width2 {
+    width: 150px;
+    text-align: center;
+}
