--- a/unit_6/css/style1.css
+++ b/unit_6/css/style1.css
@@ -2,6 +2,7 @@
 * {
 	padding: 0;
 	margin: 0;
+	box-sizing:border-box;
 }
 body {
 	text-align: center;
@@ -105,10 +106,9 @@ div {
 	display: flex;
 }
 .grid-item img {
-    width: 200px;
+    width: 100%;
 }
-
-.grid-item--width2 {
-    width: 150px;
+.grid-item {
+    width: 25%;
     text-align: center;
 }
