--- a/unit_7/css/style1.css
+++ b/unit_7/css/style1.css
@@ -65,8 +65,6 @@ p {
 	font-weight: 400;
 	width: 35em;
 	margin: auto;
-	/*margin-left: 20%;
-	margin-right: 20%;*/
 }
 nav a {
 	/*padding-right: 2em;
@@ -89,12 +87,24 @@ footer img {
 .links {
 	color: black;
 }
-.float {
+.content {
+	width: 33.33%;
+	margin: 0;
+	border: 2em;
 	float: left;
-	width: 300px;
-	justify-content: center;
-	position: relative;
-	left: -50%
+}
+.content_about {
+	width: 33.33%;
+	margin: 0;
+	border: 2em;
+	float: left;
+	background-color: #DC1400;
+}
+.about_p {
+	line-height: 1.3em;
+	font-size: 1.4em;
+	font-weight: 400;
+	width: 100%;
 }
 /*.clearfix:after {
   visibility: hidden;
@@ -115,9 +125,10 @@ footer img {
 #about {
 	clear: both;
 	text-align: left;
-	width: 80%;
-	padding: 10%;
+	width: 1000px;
+	padding: 0%;
 	background-color: #DC1400;
+	display: inline-block;
 }
 #about img {
 	float: left;
@@ -125,7 +136,7 @@ footer img {
 #about_text {
 	padding: 0 15%;
 	margin: 0 20% 0 10%;
-	width: 60%;
+	width: 66.66%;
 	vertical-align: middle;
 }
 #work {
@@ -138,11 +149,28 @@ footer img {
 	opacity: .7;
 }
 #center_contain {
-	justify-content: center;
-	margin: 0 5%;
-	position: relative;
-	left: 50%;
+	width: 1000px;
+	display: inline-block;
+
 }
 #h2_nopad {
 	padding: 0;
+}
+@media only screen and (max-width: 1064px) {
+    .content {
+        width:50%;
+    }
+    #center_contain {
+    	width: 1000px;
+    	display: inline-block;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .content {
+        width:100%;
+    }
+    #center_contain {
+    	width: 100%;
+    	display: inline-block;
+    }
 }
