--- a/unit_7/css/style1.css
+++ b/unit_7/css/style1.css
@@ -10,7 +10,7 @@ body {
 	font-size: 16px; /* 1em=16px*/
 }
 img {
-	width: 15em;
+	width: 100%;
 }
 a {
 	color: black;
@@ -77,7 +77,7 @@ nav a {
 	letter-spacing: .05em;
 }
 div {
-	margin: 2em 2em;
+	margin: 0em;
 }
 footer img {
 	height: 1.5em;
@@ -90,8 +90,9 @@ footer img {
 .content {
 	width: 33.33%;
 	margin: 0;
-	border: 2em;
 	float: left;
+	box-sizing: border-box;
+	padding: 2em;
 }
 .content_about {
 	width: 33.33%;
@@ -149,28 +150,26 @@ footer img {
 	opacity: .7;
 }
 #center_contain {
-	width: 1000px;
 	display: inline-block;
+	max-width: 1200px;
 
 }
 #h2_nopad {
 	padding: 0;
 }
-@media only screen and (max-width: 1064px) {
+@media only screen and (max-width: 800px) {
     .content {
         width:50%;
     }
     #center_contain {
-    	width: 1000px;
-    	display: inline-block;
+    	max-width: 700px;
     }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
     .content {
         width:100%;
     }
     #center_contain {
-    	width: 100%;
-    	display: inline-block;
+    	max-width: 400px;
     }
 }
